--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\disonante\\.virtualenvs\\DRF-JL0vpHdJ\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\research\\.virtualenvs\\DRF_personal_learning-dHBzvYOU\\Scripts\\python.exe"
 }
